--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,33 +1,6 @@
 name: Test
-on:
-  push:
-    branches:
-      - master
-  pull_request:
+on: [push]
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    env:
-      BUNDLE_JOBS: 4
-      BUNDLE_RETRY: 3
-      BUNDLE_PATH: vendor/bundle
-      DISABLE_SPRING: 1
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Dependencies
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
-
-      # Lint
-      - name: Run linter
-        run: bin/lint --nofix
-
   test:
     name: Test
     runs-on: ubuntu-latest
